--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": ">=5.5.9",
         "ext-zookeeper": "*",
-        "guzzlehttp/guzzle": "~5.3|~6.0"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "monolog/monolog": "~1.11"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
